1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (module-class-files, module-interface-files): Switch
	from i_* for interfaces to *Impl for classes.

	* Makefile.rules.in (INTERFACES, _CLASSES): Likewise.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in (all-classes): Strip \015 instead of \r.
	(HPUX tr doesn't handle \r).

1999-06-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in ($(POSTCLASSESFILES)): Depend on modules instead
	of $(GENFILES).
	(all): Add $(PRECLASSESFILES).

	* Makefile.rules.in (all-classes): New rule, depend on CLASSES.
	(all): Depend on all-classes.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in ($(POSTCLASSESFILES)): Depend on stubs classes
	to avoid problems with parallel makes.

1999-06-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in, Makefile.in (jdkdosdir): Remove.

1999-05-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in (.deps): Strip off carriage returns.

	* Makefile.in (JAVACOMPILE): New variable.
	(%.class): Use it.

1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in (JAVADEPS): Use expanded jdeps.jar directory,
	to avoid crashes reading jar files in Japhar.

1999-05-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (modules): Append suffix to PRECLASSES, instead of
	using PRECLASSFILES.
	(all): Likewise for POSTCLASSES.

1999-05-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (install-java-classes-as-files): Add swarm/ prefix
	and .class suffix to filelist using sed.  Remove swarm/ prefix and
	.class suffix from module-class-files and module-interface-files.
	(GENCLASSFILES, GENINTERFACEFILES, ALLCLASSFILES): Use addprefix
	swarm/ as appropriate.
	(SWARMCLASSES): New variable.
	(install-java-classes-as-files, SWARMCLASSFILES): Use it.

1999-05-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
